[gd_scene load_steps=37 format=2]

[ext_resource path="res://nave.gd" type="Script" id=1]
[ext_resource path="res://curar/curar13.png" type="Texture" id=2]
[ext_resource path="res://vidassss.png" type="Texture" id=3]
[ext_resource path="res://curar/curar1.png" type="Texture" id=8]
[ext_resource path="res://curar/curar2.png" type="Texture" id=9]
[ext_resource path="res://curar/curar3.png" type="Texture" id=10]
[ext_resource path="res://curar/curar4.png" type="Texture" id=11]
[ext_resource path="res://curar/curar12.png" type="Texture" id=12]
[ext_resource path="res://curar/curar6.png" type="Texture" id=13]
[ext_resource path="res://curar/curar10.png" type="Texture" id=14]
[ext_resource path="res://curar/curar11.png" type="Texture" id=15]
[ext_resource path="res://curar/curar7.png" type="Texture" id=16]
[ext_resource path="res://curar/curar9.png" type="Texture" id=17]
[ext_resource path="res://curar/curar8.png" type="Texture" id=18]
[ext_resource path="res://curar/curar5.png" type="Texture" id=19]
[ext_resource path="res://curar/curar.png" type="Texture" id=20]
[ext_resource path="res://curar/curar14.png" type="Texture" id=21]
[ext_resource path="res://curar/curar15.png" type="Texture" id=22]
[ext_resource path="res://curar/curar17.png" type="Texture" id=23]
[ext_resource path="res://curar/curar18.png" type="Texture" id=24]
[ext_resource path="res://curar/curar16.png" type="Texture" id=25]
[ext_resource path="res://particula_fuego.png" type="Texture" id=26]

[sub_resource type="SpriteFrames" id=14]
animations = [ {
"frames": [ ExtResource( 20 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 19 ), ExtResource( 13 ), ExtResource( 16 ), ExtResource( 18 ), ExtResource( 17 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 12 ), ExtResource( 2 ), ExtResource( 21 ), ExtResource( 22 ), ExtResource( 25 ), ExtResource( 23 ), ExtResource( 24 ) ],
"loop": false,
"name": "curar",
"speed": 15.0
} ]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 3.77134, 2.2222 )

[sub_resource type="CanvasItemMaterial" id=2]

[sub_resource type="Gradient" id=3]
offsets = PoolRealArray( 0.048, 0.176, 0.744, 0.944 )
colors = PoolColorArray( 1, 0.960938, 0, 0, 0.96875, 1, 0, 1, 1, 0, 0, 1, 0, 0, 0, 0 )

[sub_resource type="Animation" id=10]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("../Barra_de_vida/verde_vida/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.168627, 1, 0.0235294, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../Barra_de_vida/verde_vida/ColorRect:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.471935, 3.8147e-06 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../Barra_de_vida/verde_vida/ColorRect:rect_scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("../verde_vida/ColorRect:color")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 0.984314, 0, 0 ) ]
}

[sub_resource type="Animation" id=12]
resource_name = "rojo_vida"
tracks/0/type = "value"
tracks/0/path = NodePath("../verde_vida/ColorRect:color")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 3,
"values": [ Color( 1, 0.890196, 0, 0 ), Color( 1, 0, 0, 1 ), Color( 1, 0.584314, 0, 0 ) ]
}

[sub_resource type="Animation" id=13]
resource_name = "seva_todo_ala_mrd"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("../verde_vida/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 0, 0, 1 ), Color( 1, 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=11]
resource_name = "verde_vida"
tracks/0/type = "value"
tracks/0/path = NodePath("../verde_vida/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 3,
"values": [ Color( 1, 0.984314, 0, 0 ), Color( 0.172549, 1, 0, 1 ), Color( 1, 0.890196, 0, 0 ) ]
}

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 48, 19 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 3 )
region = Rect2( 0, 19, 48, 19 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 3 )
region = Rect2( 0, 38, 48, 19 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 3 )
region = Rect2( 0, 57, 48, 19 )

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [ SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ) ],
"loop": false,
"name": "barra_vida_frame",
"speed": 0.0
} ]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 3.84, 2.16748 )

[node name="nave" type="KinematicBody2D"]
position = Vector2( 136.942, 278.801 )
scale = Vector2( 25, 25 )
script = ExtResource( 1 )

[node name="vida_animacion" type="Node2D" parent="."]

[node name="Sprite" type="AnimatedSprite" parent="."]
frames = SubResource( 14 )
animation = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.0068655, -4.81161 )
shape = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="." groups=["jugador_se√±al"]]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0.0309815, -4.81297 )
shape = SubResource( 1 )

[node name="particulas_derecha" type="CPUParticles2D" parent="."]
material = SubResource( 2 )
position = Vector2( 4.91602, 7.22656 )
scale = Vector2( -0.000447332, -0.000447332 )
emitting = false
amount = 10
fract_delta = false
local_coords = false
texture = ExtResource( 26 )
emission_shape = 2
emission_rect_extents = Vector2( 999, 1000 )
flag_align_y = true
direction = Vector2( 0, 0 )
spread = 167.22
gravity = Vector2( 0, 500 )
initial_velocity = 2500.0
initial_velocity_random = 0.37
radial_accel = 250.0
scale_amount = 2.0
color_ramp = SubResource( 3 )

[node name="particulas_izquierda" type="CPUParticles2D" parent="."]
material = SubResource( 2 )
position = Vector2( -4.36572, 7.22656 )
scale = Vector2( -0.000447332, -0.000447332 )
emitting = false
amount = 10
fract_delta = false
local_coords = false
texture = ExtResource( 26 )
emission_shape = 2
emission_rect_extents = Vector2( 999, 1000 )
flag_align_y = true
direction = Vector2( 0, 0 )
spread = 167.22
gravity = Vector2( 0, 500 )
initial_velocity = 2500.0
initial_velocity_random = 0.37
radial_accel = 250.0
scale_amount = 2.0
color_ramp = SubResource( 3 )

[node name="verde_vida" type="AnimationPlayer" parent="."]
root_node = NodePath("../vida_animacion")
anims/RESET = SubResource( 10 )
anims/rojo_vida = SubResource( 12 )
anims/seva_todo_ala_mrd = SubResource( 13 )
anims/verde_vida = SubResource( 11 )

[node name="ColorRect" type="ColorRect" parent="verde_vida"]
anchor_right = 0.317
anchor_bottom = 0.08
margin_left = 0.471935
margin_top = 3.8147e-06
margin_right = -21.3281
margin_bottom = -8.0
rect_scale = Vector2( 1.20347, 1.20347 )
color = Color( 1, 0.984314, 0, 0 )

[node name="Barra_de_vida" type="CanvasLayer" parent="."]

[node name="BarraDeVida1" type="AnimatedSprite" parent="Barra_de_vida"]
position = Vector2( 71.8799, 29.4794 )
scale = Vector2( 3, 3 )
frames = SubResource( 9 )
animation = "barra_vida_frame"

[node name="area_vida" type="Area2D" parent="."]
position = Vector2( 0, -3.36 )

[node name="colicion_vida" type="CollisionShape2D" parent="area_vida"]
position = Vector2( 0.00232124, -1.47593 )
shape = SubResource( 4 )

[connection signal="animation_finished" from="Sprite" to="." method="_on_Sprite_animation_finished"]
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
